--- a/ch03/lesson_09.html
+++ b/ch03/lesson_09.html
@@ -87,7 +87,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Index.html">들어가며</a></li><li class="chapter-item expanded affix "><li class="part-title">03. 12개의 레슨으로 배우는 필수 리스프</li><li class="chapter-item expanded "><a href="../ch03/ch03.html">03. 12개의 레슨으로 배우는 필수 리스프</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../ch03/lesson_01.html">레슨 01. 필수 - 신택스</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_02.html">레슨 02. 필수 - 평가</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_03.html">레슨 03. 스페셜 폼과 매크로에 대한 예제</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_04.html">레슨 04. 조립과 분해</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_05.html">레슨 05. 네이밍과 아이덴티티</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_06.html">레슨 06. 바인딩 vs 할당</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_07.html">레슨 07. 필수 - 함수 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_08.html">레슨 08. 필수 - 매크로 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_09.html" class="active">레슨 09. 필수 - 다중 값</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_10.html">레슨 10. 프리뷰 - 다른 데이터 타입</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_11.html">레슨 11. 필수 - 입력과 출력</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_12.html">레슨 12. 필수 - 리더 매크로</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Index.html">들어가며</a></li><li class="chapter-item expanded affix "><li class="part-title">03장. 12개의 레슨으로 배우는 필수 리스프</li><li class="chapter-item expanded "><a href="../ch03/ch03.html">03장. 12개의 레슨으로 배우는 필수 리스프</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../ch03/lesson_01.html">레슨 01. 필수 - 신택스</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_02.html">레슨 02. 필수 - 평가</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_03.html">레슨 03. 스페셜 폼과 매크로에 대한 예제</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_04.html">레슨 04. 조립과 분해</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_05.html">레슨 05. 네이밍과 아이덴티티</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_06.html">레슨 06. 바인딩 vs 할당</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_07.html">레슨 07. 필수 - 함수 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_08.html">레슨 08. 필수 - 매크로 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_09.html" class="active">레슨 09. 필수 - 다중 값</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_10.html">레슨 10. 프리뷰 - 다른 데이터 타입</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_11.html">레슨 11. 필수 - 입력과 출력</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_12.html">레슨 12. 필수 - 리더 매크로</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -184,7 +184,7 @@
 </ul>
 <h2 id="대다수의-폼은-하나의-값만-만든다"><a class="header" href="#대다수의-폼은-하나의-값만-만든다">대다수의 폼은 하나의 값만 만든다</a></h2>
 <p>폼은 보통 하나의 값을 반환합니다. 리스프는 여러개의 값을 생성하거나 받을 수 있는 폼을 갖고 있습니다.</p>
-<h2 id="values는-여러개의-값을-생성하거나-아무것도-생성하지-않는다"><a class="header" href="#values는-여러개의-값을-생성하거나-아무것도-생성하지-않는다">VALUES는 여러개의 값을 생성하거나 아무것도 생성하지 않는다.</a></h2>
+<h2 id="values는-여러개의-값을-생성하거나-아무것도-생성하지-않는다"><a class="header" href="#values는-여러개의-값을-생성하거나-아무것도-생성하지-않는다">VALUES는 여러개의 값을 생성하거나 아무것도 생성하지 않는다</a></h2>
 <p><code>values</code> 폼은 0개 이상의 값을 반환합니다:</p>
 <pre><code class="language-lisp">(values)
 ;;=&gt;
@@ -198,7 +198,7 @@
 </code></pre>
 <p>폼의 평가에 의해 생성된 여러 라인이으로 얼마나 많은 값이 반환되었는지 보았습니다. 위의 예제에서 3개의 <code>values</code> 폼에서 각각 0개, 1개, 2개의 값을 생성하였습니다.</p>
 <p><code>values</code>는 함수이며, 따라서 이의 인수를 평가합니다.</p>
-<h2 id="몇몇-특수한-폼은-여러개의-값을-받을-수-있다"><a class="header" href="#몇몇-특수한-폼은-여러개의-값을-받을-수-있다">몇몇 특수한 폼은 여러개의 값을 받을 수 있다.</a></h2>
+<h2 id="몇몇-특수한-폼은-여러개의-값을-받을-수-있다"><a class="header" href="#몇몇-특수한-폼은-여러개의-값을-받을-수-있다">몇몇 특수한 폼은 여러개의 값을 받을 수 있다</a></h2>
 <p>여러개의 값들을 다루고자 한다면 어떻게 해야 할까요? 가장 기본적인 것들로는 :</p>
 <ol>
 <li>각 값들을 개별 심볼로 바인드한다.</li>
@@ -219,7 +219,7 @@
      (list w x y z))
 ;;=&gt; (:LEFT :RIGHT NIL NIL)
 </code></pre>
-<h2 id="몇몇-폼은-여러개의-값들을-그대로-넘긴다"><a class="header" href="#몇몇-폼은-여러개의-값들을-그대로-넘긴다">몇몇 폼은 여러개의 값들을 그대로 넘긴다.</a></h2>
+<h2 id="몇몇-폼은-여러개의-값들을-그대로-넘긴다"><a class="header" href="#몇몇-폼은-여러개의-값들을-그대로-넘긴다">몇몇 폼은 여러개의 값들을 그대로 넘긴다</a></h2>
 <p>몇몇 폼은 새로운 값을 생성하는 대신에, 본체의 마지막 값을 넘김니다. 예제는 <code>let</code>, <code>cond</code>, <code>defun</code>, <code>lambda</code>의 본체를 포함합니다.</p>
 <pre><code class="language-lisp">(let ((a 1)
       (b 2))
