--- a/ch03/lesson_10.html
+++ b/ch03/lesson_10.html
@@ -87,7 +87,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Index.html">들어가며</a></li><li class="chapter-item expanded affix "><li class="part-title">03. 12개의 레슨으로 배우는 필수 리스프</li><li class="chapter-item expanded "><a href="../ch03/ch03.html">03. 12개의 레슨으로 배우는 필수 리스프</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../ch03/lesson_01.html">레슨 01. 필수 - 신택스</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_02.html">레슨 02. 필수 - 평가</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_03.html">레슨 03. 스페셜 폼과 매크로에 대한 예제</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_04.html">레슨 04. 조립과 분해</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_05.html">레슨 05. 네이밍과 아이덴티티</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_06.html">레슨 06. 바인딩 vs 할당</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_07.html">레슨 07. 필수 - 함수 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_08.html">레슨 08. 필수 - 매크로 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_09.html">레슨 09. 필수 - 다중 값</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_10.html" class="active">레슨 10. 프리뷰 - 다른 데이터 타입</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_11.html">레슨 11. 필수 - 입력과 출력</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_12.html">레슨 12. 필수 - 리더 매크로</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Index.html">들어가며</a></li><li class="chapter-item expanded affix "><li class="part-title">03장. 12개의 레슨으로 배우는 필수 리스프</li><li class="chapter-item expanded "><a href="../ch03/ch03.html">03장. 12개의 레슨으로 배우는 필수 리스프</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../ch03/lesson_01.html">레슨 01. 필수 - 신택스</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_02.html">레슨 02. 필수 - 평가</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_03.html">레슨 03. 스페셜 폼과 매크로에 대한 예제</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_04.html">레슨 04. 조립과 분해</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_05.html">레슨 05. 네이밍과 아이덴티티</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_06.html">레슨 06. 바인딩 vs 할당</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_07.html">레슨 07. 필수 - 함수 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_08.html">레슨 08. 필수 - 매크로 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_09.html">레슨 09. 필수 - 다중 값</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_10.html" class="active">레슨 10. 프리뷰 - 다른 데이터 타입</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_11.html">레슨 11. 필수 - 입력과 출력</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_12.html">레슨 12. 필수 - 리더 매크로</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -182,7 +182,7 @@
 <ul>
 <li><a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/chapter03-10.html">원문</a></li>
 </ul>
-<h2 id="리스프는-대부분의-숫자를-제대로-처리한다"><a class="header" href="#리스프는-대부분의-숫자를-제대로-처리한다">리스프는 대부분의 숫자를 제대로 처리한다.</a></h2>
+<h2 id="리스프는-대부분의-숫자를-제대로-처리한다"><a class="header" href="#리스프는-대부분의-숫자를-제대로-처리한다">리스프는 대부분의 숫자를 제대로 처리한다</a></h2>
 <p>뭔가 이상한 소리처럼 들립니다. 컴퓨터는 항상 숫자로 일을 처리하지 않나요?  음, 아닙니다... 보통은 그렇지 않습니다.</p>
 <p>수의 계산은 수 많은 방식으로 나뉠 수 있습니다. 가장 큰 문제가 되는 점 중 하나는 소수점(floating point) 계산이 있습니다 (혹여 여러분이 쓰고 있는 프로그래밍 언어가 이를 실수(real)라 부른다면, 아마 거짓말일 것입니다). 비쥬얼 어쩌고저쩌고 혹은 객체 지향 블라블라와 같은 많은 책들 중 대다수가 이 소수점 계산을 다루고 있습니다.</p>
 <p>소수점에서의 문제는 수학적으로 실수(real)가 아니지만, 종종 실수(real)인양 (잘못) 사용된다는 점입니다. 중대한 문제는 소수를 그렇게 사용한다면, 정확도에 한계가 생긴다는 점 입니다 - 소수점 우측 몇개의 자릿수 만큼. 이제, 계산에 사용되는 모든 숫자가 거의 같은 규모의 수라면, 계산의 정확도가 떨어지지 않을 수 있을 것입니다. 그러나, 규모가 매우 차이나는 숫자들이라면, 소수점 계산은 정확도가 희생될 것입니다.</p>
@@ -245,7 +245,7 @@
 ;;=&gt; 1 ; 이전 계산과 비교해 보시기 바랍니다
 </code></pre>
 <p>리스프는 소수를 소수점과 함께, 정수에는 소수점 없이 출력합니다.</p>
-<h2 id="문자는-리스프가-읽고-쓸-수-있는-무언가를-제공합니다"><a class="header" href="#문자는-리스프가-읽고-쓸-수-있는-무언가를-제공합니다">문자는 리스프가 읽고 쓸 수 있는 무언가를 제공합니다.</a></h2>
+<h2 id="문자는-리스프가-읽고-쓸-수-있는-무언가를-제공한다"><a class="header" href="#문자는-리스프가-읽고-쓸-수-있는-무언가를-제공한다">문자는 리스프가 읽고 쓸 수 있는 무언가를 제공한다</a></h2>
 <p>기본적으로 리스프 I/O(input/output)는 문자를 이용합니다. <code>READ</code>와 <code>WRITE</code> 함수는 문자를 리스프 오브젝트로 그리고 그 반대로 변환시킵니다. <code>READ-CHAR</code>와 <code>WRITE-CHAR</code>는 단일 문자를 읽고 씁니다.</p>
 <pre><code class="language-lisp">(read)
 ;;&lt;&lt; a ⏎
@@ -308,7 +308,7 @@ P Q R S T U V W X Y Z [ \ ] ^ _
 ‘ a b c d e f g h i j k l m n o
 p q r s t u v w x y z { | } ~
 </code></pre>
-<h2 id="배열은-데이터를-테이블로-정리한다"><a class="header" href="#배열은-데이터를-테이블로-정리한다">배열은 데이터를 테이블로 정리한다.</a></h2>
+<h2 id="배열은-데이터를-테이블로-정리한다"><a class="header" href="#배열은-데이터를-테이블로-정리한다">배열은 데이터를 테이블로 정리한다</a></h2>
 <p>여러분이 데이터를 2차원, 3차원 혹은 더 많은 차원의 테이블로 역으려고자 한다면, 배열(array)을 만들 수 있습니다:</p>
 <pre><code class="language-lisp">(setq a1 (make-array '(3 4)))
 ;;=&gt; #2A((NIL NIL NIL NIL)
@@ -403,7 +403,7 @@ s1
 (string #\G)
 ;;=&gt; &quot;G&quot;
 </code></pre>
-<h2 id="심볼은-유니크하지만-여러개의-값을-가진다"><a class="header" href="#심볼은-유니크하지만-여러개의-값을-가진다">심볼은 유니크하지만, 여러개의 값을 가진다.</a></h2>
+<h2 id="심볼은-유니크하지만-여러개의-값을-가진다"><a class="header" href="#심볼은-유니크하지만-여러개의-값을-가진다">심볼은 유니크하지만, 여러개의 값을 가진다</a></h2>
 <p>이미 <a href="./lesson_05.html">레슨 5</a>에서 심볼은 고유한 동일성(identity)을 지닌다고 했는데, 반복해 설명할 필요가 있습니다: 심볼은 철자가 같은 다른 심볼과 동일합니다(이번 레슨 끝부분에서 좀 더 배우게 될 패키지 지정(designation)에 포함된). 이는 리스프로 하여금 프로그램이나 데이터를 읽을 수 있도록 만들어 주며, 철자가 같은 심볼은 모두 동일한 심볼입니다. 리스프가 이를 위한 매커니즘을 제공하기에, 심볼 정보를 다루는 프로그램을 작성하는 것에 대한 걱정을 하나 덜게 되었습니다.</p>
 <p>저희는 또한 <a href="./lesson_05.html">레슨 5</a>에서 심볼은 변수와 함수, 그리고 문서, 출력 이름, 프로퍼티(properties)를 위한 값을 가질 수 있다고 배웠습니다. 심볼의 프로퍼티 리스트(property list)는 다수의 키/값 쌍이 심볼과 연결된 아주 작은 데이터베이스와 같습니다. 예를들어, 여러분의 프로그램이 오브젝트를 표현하고 다루고자 한다면, 오브젝트에 관한 정보를 프로퍼티 리스트에 저장할 수 있습니다:</p>
 <pre><code class="language-lisp">(setf (get 'object-1 'color) 'red)
@@ -433,7 +433,7 @@ object-1
 <p><code>OBJECT-1</code>은 값을 갖지 않는다는 점을 주목하시기 바랍니다 - 중요한 것은 바로 이 두 부분입니다: 심볼의 동일성과 심볼의 프로퍼티.</p>
 <p>이러한 프로퍼티의 이용은 현대의 객체 지향 프로그래밍보다 몇 십년이나 앞서 나왔습니다. 이는 오브젝트의 필수적인 3가지 매커니즘 중 2가지를 제공합니다: 동일성(identify)과 캡슐화(encapsulation) (프로퍼퍼티의 값 역시 함수가 될 수 있다는 점을 명심하시기 바랍니다). 3번째 매커니즘 상속(inheritance)은 다른 &quot;오브젝트&quot;를 연결하여 시뮬레이션합니다.</p>
 <p>오늘날의 리스프 프로그램에서는 프로퍼티는 거의 사용되지 않습니다. 해쉬테이블(Hashtables) (아래 참조) [p 73] , (다음 단락에서 기술된) 구조체(structures), CLOS 오브젝트(7장 [p 117]과 14장 [p 157] 참조)는 사용하기 더 편리하며 더욱 효율적인 방식으로 프로퍼티 리스트의 모든 기능을 제공합니다. 현대 리스프의 개발에선 프로퍼티 파일과 심볼을 정의하는 폼의 파일 위치, 함수의 인자 리스트의 정의와 같은 (프로그래밍 환경에서 유용한 도구로 이용하기 위한) 특정 정보를 프로그램에 주석으로써 기록하는 목적으로 주로 사용합니다.</p>
-<h2 id="구조체는-연관된-데이터들을-모아-저장할-수-있다"><a class="header" href="#구조체는-연관된-데이터들을-모아-저장할-수-있다">구조체는 연관된 데이터들을 모아 저장할 수 있다.</a></h2>
+<h2 id="구조체는-연관된-데이터들을-모아-저장할-수-있다"><a class="header" href="#구조체는-연관된-데이터들을-모아-저장할-수-있다">구조체는 연관된 데이터들을 모아 저장할 수 있다</a></h2>
 <p>리스프 구조체는 명명된 슬롯(slot)과 관계된 데이터를 저장하는 오브젝트를 생성하는 방법을 제공해 줍니다.</p>
 <pre><code class="language-lisp">(defstruct struct-1
   color
@@ -468,7 +468,7 @@ object-1
 </code></pre>
 <p>이 예에서, 우리는 <code>COLOR</code>, <code>SHAPE</code>, <code>SIZE</code>, <code>WEIGHT</code> 슬롯을 지닌 <code>STRUCT-1</code> 구조체를 정의하였습니다. 그런 다음 <code>STRUCT-1</code>의 인스턴스(instance)를 만들고, 해당 인스턴스를 변수 <code>OBJECT-2</code>에 할당하였습니다. 예제의 나머지 부분은, 구조체의 타입과 슬롯 이름으로 구성된 접근자(assessor)함수를 이용하여, 어떻게 구조체 인스턴스의 슬롯에 접근할 수 있는지 보여주고 있습니다. <code>DEFSTRUCT</code>를 이용하여 구조체를 정의하면 리스프는 <code>make-구조체명</code>과 <code>구조체명-슬롯명</code> 함수도 만들어 줍니다.</p>
 <p>6장[p 112]에서 <code>DEFSTRUCT</code>의 optional 기능에 대해 살펴볼 것입니다.</p>
-<h2 id="타입-정보를-런타임에-알-수-있다"><a class="header" href="#타입-정보를-런타임에-알-수-있다">타입 정보를 런타임에 알 수 있다.</a></h2>
+<h2 id="타입-정보를-런타임에-알-수-있다"><a class="header" href="#타입-정보를-런타임에-알-수-있다">타입 정보를 런타임에 알 수 있다</a></h2>
 <p>심볼은 런타임시 어떠한 변수 타입과도 연관지을 수 있습니다. 문제가 있는 경우, 리스프는 해당 값의 타입을 질의할 수 있는 방법을 제공합니다:</p>
 <pre><code class="language-lisp">(type-of 123)
 ;;=&gt; FIXNUM
@@ -487,7 +487,7 @@ object-1
 </code></pre>
 <p><code>TYPE-OF</code> 는 인수의 타입을 나타내는 심볼 혹은 리스트를 반환합니다. 게다가 이 정보를 이용하여 인자의 타입에 기반한 프로그램의 동작 방식을 조정 할 수 있습니다. <code>TYPECASE</code> 함수는 타입에 대한 질의(inquiry)와 COND-와 같은 분기(dispatch)를 결합한 것입니다.</p>
 <p>CLOS(14장 [p 157] 참조)의 제네릭 함수의 도입으로, <code>TYPE-OF</code>는 예전만큼 중요하지는 않습니다.</p>
-<h2 id="해쉬-테이블은-룩업키로-빠르게-데이터에-접근-할-수-있다"><a class="header" href="#해쉬-테이블은-룩업키로-빠르게-데이터에-접근-할-수-있다">해쉬 테이블은 룩업키로 빠르게 데이터에 접근 할 수 있다.</a></h2>
+<h2 id="해쉬-테이블은-룩업키로-빠르게-데이터에-접근-할-수-있다"><a class="header" href="#해쉬-테이블은-룩업키로-빠르게-데이터에-접근-할-수-있다">해쉬 테이블은 룩업키로 빠르게 데이터에 접근 할 수 있다</a></h2>
 <p>해쉬 테이블은 유니크 키(유일 키, unique key)와 값의 연결로 이루어져 있습니다. 프로퍼티 리스트완 다르게, 해쉬 테이블은 수 많은 키/값 쌍에 적합하며, 적은 수의 연결 집합에 대해서는 과도한 오버헤드(overhead)가 발생합니다.</p>
 <pre><code class="language-lisp">(setq ht1 (make-hash-table))
 ;;=&gt; #&lt;HASH-TABLE&gt;
@@ -518,7 +518,7 @@ object-1
 <pre><code class="language-lisp">(make-hash-table :test #'equal)
 </code></pre>
 <p>키를 없애고자 한다면 <code>(REMHASH key hash-table)</code>폼을 이용합니다. 그리고 키에 해당하는 값을 바꾸고자한다면, 키/값 쌍을 추가했던 것처럼 <code>GETHASH</code>와 <code>SETF</code>를 이용합니다.</p>
-<h2 id="패키지로-이름-충돌을-방지할-수-있다"><a class="header" href="#패키지로-이름-충돌을-방지할-수-있다">패키지로 이름 충돌을 방지할 수 있다.</a></h2>
+<h2 id="패키지로-이름-충돌을-방지할-수-있다"><a class="header" href="#패키지로-이름-충돌을-방지할-수-있다">패키지로 이름 충돌을 방지할 수 있다</a></h2>
 <p>프로그램을 작성시 어려운 점 중 하나는 이름 짓는 것입니다. 한편으론, 기억하기 쉽고 해당 객체의 역할이나 목적을 떠올릴 수 있는 이름을 사용하기 원할 것입니다. 그리고 다른 한편으론, 다른 프로그램의 어딘가에 이미 사용한 (혹은 사용될 것 같은)이름을 여러분의 프로그램에서 사용하고 싶진 않을 것입니다.</p>
 <p>이름 충돌(naming conflict)을 피하는 법 중 하나는 프로그램에 있는 모든 이름에 누구도 사용하지 않는 고유 접두사(prefix)를 붙이는 것입니다. 라이브러리에서 이러한 방식을 자주 볼 수 있습니다 - 보통 1~3자로 접두사를 붙입니다. 불행히도, 여전히 두 소프트웨어 개발자가 동일한 접두사를 선택할 수 있는 관문이 남아있습니다; 일부 접두사가 다른 접두사들보다 더 매력적인 경우. 모든 소프트웨어를 제어할 수 있다면, 모든 접두사를 선택하여 문제를 피할 수 있습니다. 타사 소프트웨어를 구입하는 경우, 제조사에 의해 선택된 이름을 사용해야만 하며, 동일한 접두사를 사용하지 않기를 바래야만 할 것입니다.</p>
 <p><img src="../res/prefixed-names.gif" alt="prefixed-names.gif" /></p>
