--- a/ch03/lesson_02.html
+++ b/ch03/lesson_02.html
@@ -87,7 +87,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Index.html">들어가며</a></li><li class="chapter-item expanded affix "><li class="part-title">03. 12개의 레슨으로 배우는 필수 리스프</li><li class="chapter-item expanded "><a href="../ch03/ch03.html">03. 12개의 레슨으로 배우는 필수 리스프</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../ch03/lesson_01.html">레슨 01. 필수 - 신택스</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_02.html" class="active">레슨 02. 필수 - 평가</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_03.html">레슨 03. 스페셜 폼과 매크로에 대한 예제</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_04.html">레슨 04. 조립과 분해</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_05.html">레슨 05. 네이밍과 아이덴티티</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_06.html">레슨 06. 바인딩 vs 할당</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_07.html">레슨 07. 필수 - 함수 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_08.html">레슨 08. 필수 - 매크로 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_09.html">레슨 09. 필수 - 다중 값</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_10.html">레슨 10. 프리뷰 - 다른 데이터 타입</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_11.html">레슨 11. 필수 - 입력과 출력</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_12.html">레슨 12. 필수 - 리더 매크로</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Index.html">들어가며</a></li><li class="chapter-item expanded affix "><li class="part-title">03장. 12개의 레슨으로 배우는 필수 리스프</li><li class="chapter-item expanded "><a href="../ch03/ch03.html">03장. 12개의 레슨으로 배우는 필수 리스프</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../ch03/lesson_01.html">레슨 01. 필수 - 신택스</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_02.html" class="active">레슨 02. 필수 - 평가</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_03.html">레슨 03. 스페셜 폼과 매크로에 대한 예제</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_04.html">레슨 04. 조립과 분해</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_05.html">레슨 05. 네이밍과 아이덴티티</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_06.html">레슨 06. 바인딩 vs 할당</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_07.html">레슨 07. 필수 - 함수 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_08.html">레슨 08. 필수 - 매크로 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_09.html">레슨 09. 필수 - 다중 값</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_10.html">레슨 10. 프리뷰 - 다른 데이터 타입</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_11.html">레슨 11. 필수 - 입력과 출력</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_12.html">레슨 12. 필수 - 리더 매크로</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -182,18 +182,18 @@
 <ul>
 <li><a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/chapter03-02.html">원문</a></li>
 </ul>
-<h2 id="폼form은-평가될-수-있습니다"><a class="header" href="#폼form은-평가될-수-있습니다">폼(form)은 평가될 수 있습니다.</a></h2>
+<h2 id="폼form은-평가될-수-있다"><a class="header" href="#폼form은-평가될-수-있다">폼(form)은 평가될 수 있다</a></h2>
 <p><code>폼(form)</code>은 <code>아톰(atom)</code> 혹은 <code>리스트(list)</code>가 될 수 있습니다. 중요한 것은 <code>폼</code>이 <code>평가(evaluation)</code>된다는 것입니다. 평가라는 것은 상당한 기술적 의미를 지니고 있으며, 이번 섹션에서 서서히 그 모습을 드러나게 될 것입니다.</p>
 <p><code>폼</code>이 아톰이라면 평가는 단순합니다. 리스프는 아톰을 마치 이름처럼 다루고, 값이 존재한다면 이름에 저장된 값을 얻습니다. 여러분은 아마도 왜 제가 아톰은 변수라고 직접적으로 말하지 않는지 의아할 것입니다. 명확하게 정의하지 않은 이유는 아톰은 변수이거나 상수의 값을 가질 수 있기 때문입니다. 그리고 아톰의 값은 경우에 따라 상수가 될 수 도 있습니다.</p>
 <p>숫자는 <code>아톰</code>입니다(이 값은 상수입니다). 리스프는 숫자에 값을 저장 할 수 없습니다: 숫자는 자체적으로 평가됩니다.</p>
-<p>정의가 완전히 내려지지 않은 새로운 용어를 소개합니다. 이제, 심볼을 값을 가질 수 있는 <code>아톰</code>이라고 여기기 바랍니다. 레슨 5[p 53]에서 심볼에 대해 더욱 자세히 살펴볼 것입니다.</p>
+<p>정의가 완전히 내려지지 않은 새로운 용어를 소개합니다. 이제, 심볼을 값을 가질 수 있는 <code>아톰</code>이라고 여기기 바랍니다. <a href="./lesson_05.html">레슨 5</a>[p 53]에서 심볼에 대해 더욱 자세히 살펴볼 것입니다.</p>
 <p><code>defconstant</code>로 정의된 심볼은 상수 값을 지닙니다. 리스프는 변수처럼 아톰에 값을 저장한 다음, 값을 바꿀 수 없다라는 메모를 추가합니다.</p>
 <p>패키지에 있는 <code>키워드(keyword) 심볼</code>은 스스로 평가됩니다. 패키지에 관한 것은 31장[p 247]에서 자세히 살펴볼 것입니다. 지금, 여러분이 알아야 할것은 (패키지 프리픽스라 불리는) <code>:</code> 문자로 시작하는 심볼은 <code>키워드 심볼</code>이라는 것입니다. <code>키워드 심볼</code>은 그 자신을 값으로 갖습니다.</p>
-<p>다양한 방식으로 심볼에서 값을 얻을 수 있습니다. 리스프는 실제로 심볼에 다양한 값을 저장합니다. 하나는 변수로서의 심볼의 값. 그리고 다른 하나는 함수로서 심볼입니다. 또 다른 것들은 해당 심볼에 대한 문서를 얻거나, 출력값으로 활용하거나, 연관리스트(associated list)처럼 속성값으로 쓰이기도 합니다. 이러한 것들에 대해 레슨 5 [p 53], 레슨 6 [p 56], 레슨 7 [p 59]에서 더욱 자세히 살펴볼 것입니다.</p>
+<p>다양한 방식으로 심볼에서 값을 얻을 수 있습니다. 리스프는 실제로 심볼에 다양한 값을 저장합니다. 하나는 변수로서의 심볼의 값. 그리고 다른 하나는 함수로서 심볼입니다. 또 다른 것들은 해당 심볼에 대한 문서를 얻거나, 출력값으로 활용하거나, 연관리스트(associated list)처럼 속성값으로 쓰이기도 합니다. 이러한 것들에 대해 <a href="./lesson_05.html">레슨 5</a> [p 53], <a href="./lesson_06.html">레슨 6</a> [p 56], <a href="./lesson_07.html">레슨 7</a> [p 59]에서 더욱 자세히 살펴볼 것입니다.</p>
 <p>폼이 리스트라면, 첫번째 요소는 심볼이거나 람다(lambda)표현식이라 불리는 특별한 폼일 것입니다. (람다 표현식에 대한것은 잠시 뒤로 미루겠습니다.)
 심볼은 함수의 이름을 짓습니다. 리스프에서 심볼 <code>+</code>, <code>-</code>, <code>*</code>, <code>/</code>는 일반적인 산술 연산자입니다: 덧셈, 빨셈, 곱셈, 나누기. 각 심볼은 산술 연산을 수행하는 함수와 연관되어있습니다.</p>
 <p>따라서 리스프가 폼 <code>(+ 2 3)</code>을 평가하면, 이는 덧셈 함수<code>+</code>에 인자 <code>2</code>와 <code>3</code>을 적용시킬 것이며, 예상되듯이 결과 <code>5</code>를 반환할 것입니다. 함수로서 심볼 <code>+</code>가 인자들 앞에 있습니다. 이는 <code>전위 표기법(prefix notation)</code>입니다. 리스프가 리스트를 폼으로 평가하기 위해 무얼할 것인지 이해하기 위해선, 리스트의 첫번째 요소를 살펴보시기 바랍니다.</p>
-<h2 id="함수는-인자를-받을-수-있습니다"><a class="header" href="#함수는-인자를-받을-수-있습니다">함수는 인자를 받을 수 있습니다.</a></h2>
+<h2 id="함수는-인자를-받을-수-있다"><a class="header" href="#함수는-인자를-받을-수-있다">함수는 인자를 받을 수 있다</a></h2>
 <p>주어진 리스트를 평가할때 리스프는 폼을 함수 호출로써 다룹니다. 지금부터 우리는 수 많은 리스프의 평가를 보게 될 것이며, 리스프의 입력과 이의 반응을 구분하기 위해 다음과 같이 시각적 표시를 할 것입니다:</p>
 <pre><code class="language-lisp">(어떠한 리스프 입력)
 ;;=&gt; 리스프 평가의 결과
@@ -255,7 +255,7 @@ WHAT-IS-THIS?
 </code></pre>
 <p>숫자와 키워드는 스스로 평가됩니다. 문자열도 그러합니다. <code>*FEATURES*</code>는 리스프에 의해 미리 정의된 변수입니다. 여러분의 시스템은 아마도 다른 값을 반환할 것입니다.</p>
 <p>심볼 <code>WHAT-IS-THIS?</code>는 리스프에 의해 미리 정의되지 않아 값을 지니지 않으며, 이에 값을 얻을 수 없습니다. 시스템은 값 대신에 에러메시지로 응답할 것입니다. 에러 메시지 앞에 <code>;;&gt;|</code>를 붙여 표시하였습니다. 시스템에 따라 다른 에러 메시지가 출력될 수 있습니다.</p>
-<h2 id="함수는-다수의-값을-반환-할-수-있다"><a class="header" href="#함수는-다수의-값을-반환-할-수-있다">함수는 다수의 값을 반환 할 수 있다.</a></h2>
+<h2 id="함수는-다수의-값을-반환-할-수-있다"><a class="header" href="#함수는-다수의-값을-반환-할-수-있다">함수는 다수의 값을 반환 할 수 있다</a></h2>
 <p>우리는 종종 다수의 값을 반환하는 함수를 갖길 원합니다. 예를들어, 데이터베이스 전체를 살펴보는 함수는 요구하는 값과 완료상태코드를 동시에 반환해야 합니다. 이를 행할 방법으로는 해당 결과값을 저장할 위치 자체를 함수에 전달하는 것입니다; 가능은 하지만, 리스프 프로그램에서는 매우 드믄 일입니다.</p>
 <p>또 다른 접근법은 결과와 상태코드를 하나로 묶어 하나의 반환 값으로 만드는 것입니다.
 리스프는 구조체[p 72]를 포함하여 여러분에게 이를 수행할 다양한 방식을 제공합니다. 다만, 이와같이 하나로 묶는 방식은 잘못하면 가비지(29장 [p 238] 참조)가 생성되어 프로그램 작동 속도가 느려지게 만들 수 있기에 숙련된 리스프 프로그래머는 이와 같은 작업을 피합니다.</p>
@@ -268,17 +268,17 @@ WHAT-IS-THIS?
 ;;=&gt; &quot;Hello&quot;
 </code></pre>
 <p>리스프가 <code>values</code> 폼으로 각 인자에 대한 값을 반환하는 것을 확인할 수 있습니다.</p>
-<h2 id="함수에서-인자를-수정하지-않는다"><a class="header" href="#함수에서-인자를-수정하지-않는다">함수에서 인자를 수정하지 않는다.</a></h2>
+<h2 id="함수-안에서-인자를-수정하지-않는다"><a class="header" href="#함수-안에서-인자를-수정하지-않는다">함수 안에서 인자를 수정하지 않는다</a></h2>
 <p>앞서, 결과값을 저장할 위치 자체를 인자로 함수에 넘길 수 있으며, 함수가 그 위치의 값을 바꿀 수도 있다고 말한 바가 있습니다. 다른 언어들은 이를 일반적인 레파토리로 말할지라도, 리스프 프로그램에서 매우 드문 일입니다.</p>
 <p>저장할 위치에 키워드가 아닌 심볼이나 구조체 같은 것을 넣을 수 는 있습니다. 심볼을 넣을 경우, 함수는 심볼에 새로운 값을 넣는 코드를 수행해야만 합니다. 구조체를 넣을 경우 구조체의 각 값을 올바르게 변경하는 코드를 수행해야만 합니다. 이러한 작업 자체도 복잡하고 이렇게 작성된 프로그램을 이해하는 것도 어렵습니다. 따라서 리스프 프로그래머들은 일반적으로 인자를 수정하지 않고, 인자는 인자, 결과는 결과로 구분된 함수를 작성합니다.</p>
-<h2 id="인자는-보통은-함수가-적용-전에-평가된다"><a class="header" href="#인자는-보통은-함수가-적용-전에-평가된다">인자는 (보통은) 함수가 적용 전에 평가된다.</a></h2>
+<h2 id="인자는-보통은-함수가-적용-전에-평가된다"><a class="header" href="#인자는-보통은-함수가-적용-전에-평가된다">인자는 (보통은) 함수가 적용 전에 평가된다</a></h2>
 <p>리스프가 함수를 평가하면, 앞서 봤던것처럼[p 42], 항상 모든 인자를 우선적으로 평가합니다. 불행히도, 모든 규칙에는 예외가 있으며, (곧 보게될 것처럼)이 규칙도 예외는 아닙니다... 문제는 리스프가 함수의 인자를 평가하지 않을 수 있다라는 점이 아니라, 리스트 폼은 함수 호출이 아닐 수 도 있다라는 점입니다.</p>
 <h2 id="인자들은-좌측에서-우측으로-순서대로-평가된다"><a class="header" href="#인자들은-좌측에서-우측으로-순서대로-평가된다">인자들은 좌측에서 우측으로 순서대로 평가된다</a></h2>
 <p>리스트 폼이 함수를 호출하면, 이의 인자는 항상 좌측에서 우측으로 순서대로 평가됩니다.</p>
-<h2 id="스페셜-폼과-매크로는-인자의-평가하는-방법을-바꿀-수-있다"><a class="header" href="#스페셜-폼과-매크로는-인자의-평가하는-방법을-바꿀-수-있다">스페셜 폼과 매크로는 인자의 평가하는 방법을 바꿀 수 있다.</a></h2>
+<h2 id="스페셜-폼과-매크로는-인자의-평가하는-방법을-바꿀-수-있다"><a class="header" href="#스페셜-폼과-매크로는-인자의-평가하는-방법을-바꿀-수-있다">스페셜 폼과 매크로는 인자의 평가하는 방법을 바꿀 수 있다</a></h2>
 <p>리스트 폼이 함수 호출이 아닐 수 도 있다 라고 했는데, 그럼 무엇이 될 수 있을까요?
 2가지 경우가 있지만, 결과는 같습니다: 몇몇 인자는 평가되며 몇몇은 평가가 안됩니다. 폼이나 폼이 아니냐에 달려있습니다. 이 예외에 대해서만 알면 됩니다. 다행히도, 대부분의 리스프 시스템은 한두번의 키 입력으로 이에 대한 온라인 문서를 여러분에게 보여줄 것입니다.</p>
-<p>모든 인자가 평가되지 않는 폼은 두가지가 있습니다: 스페셜 폼과 매크로. 리스프는 몇몇 스페셜 폼을 미리 정의해 두었습니다. 언어 자체의 주요 기능이기에 여러분만의 스페셜 폼을 추가할 수는 없습니다. 또 리스프는 몇몇 매크로를 미리 정의해두었습니다. 단, 매크로는 저희가 작성할 수 있습니다. 리스프의 매크로를 이용하면 언어의 강력한 힘을 이용하여 우리만의 기능을 추가 할 수 있습니다. 이 장의 뒷 부분에서 간략하게 간단한 매크로를 작성해 볼 것입니다 [p 61]. 20장에서는[p 188] 복잡한 매크로에 대해 다뤄볼 것입니다.</p>
+<p>모든 인자가 평가되지 않는 폼은 두가지가 있습니다: 스페셜 폼과 매크로. 리스프는 몇몇 스페셜 폼을 미리 정의해 두었습니다. 언어 자체의 주요 기능이기에 여러분만의 스페셜 폼을 추가할 수는 없습니다. 또 리스프는 몇몇 매크로를 미리 정의해두었습니다. 단, 매크로는 저희가 작성할 수 있습니다. 리스프의 매크로를 이용하면 언어의 강력한 힘을 이용하여 우리만의 기능을 추가 할 수 있습니다. 이 장의 뒷 부분에서 간략하게 간단한 <a href="./lesson_08.html">매크로를 작성해 볼 것입니다</a> [p 61]. 20장에서는[p 188] 복잡한 매크로에 대해 다뤄볼 것입니다.</p>
 <h2 id="짚고-넘어가기"><a class="header" href="#짚고-넘어가기">짚고 넘어가기</a></h2>
 <ul>
 <li>폼(form)</li>
