--- a/ch03/lesson_11.html
+++ b/ch03/lesson_11.html
@@ -87,7 +87,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Index.html">들어가며</a></li><li class="chapter-item expanded affix "><li class="part-title">03. 12개의 레슨으로 배우는 필수 리스프</li><li class="chapter-item expanded "><a href="../ch03/ch03.html">03. 12개의 레슨으로 배우는 필수 리스프</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../ch03/lesson_01.html">레슨 01. 필수 - 신택스</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_02.html">레슨 02. 필수 - 평가</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_03.html">레슨 03. 스페셜 폼과 매크로에 대한 예제</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_04.html">레슨 04. 조립과 분해</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_05.html">레슨 05. 네이밍과 아이덴티티</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_06.html">레슨 06. 바인딩 vs 할당</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_07.html">레슨 07. 필수 - 함수 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_08.html">레슨 08. 필수 - 매크로 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_09.html">레슨 09. 필수 - 다중 값</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_10.html">레슨 10. 프리뷰 - 다른 데이터 타입</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_11.html" class="active">레슨 11. 필수 - 입력과 출력</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_12.html">레슨 12. 필수 - 리더 매크로</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Index.html">들어가며</a></li><li class="chapter-item expanded affix "><li class="part-title">03장. 12개의 레슨으로 배우는 필수 리스프</li><li class="chapter-item expanded "><a href="../ch03/ch03.html">03장. 12개의 레슨으로 배우는 필수 리스프</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../ch03/lesson_01.html">레슨 01. 필수 - 신택스</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_02.html">레슨 02. 필수 - 평가</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_03.html">레슨 03. 스페셜 폼과 매크로에 대한 예제</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_04.html">레슨 04. 조립과 분해</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_05.html">레슨 05. 네이밍과 아이덴티티</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_06.html">레슨 06. 바인딩 vs 할당</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_07.html">레슨 07. 필수 - 함수 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_08.html">레슨 08. 필수 - 매크로 정의</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_09.html">레슨 09. 필수 - 다중 값</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_10.html">레슨 10. 프리뷰 - 다른 데이터 타입</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_11.html" class="active">레슨 11. 필수 - 입력과 출력</a></li><li class="chapter-item expanded "><a href="../ch03/lesson_12.html">레슨 12. 필수 - 리더 매크로</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -182,7 +182,7 @@
 <ul>
 <li><a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/chapter03-11.html">원문</a></li>
 </ul>
-<h2 id="read는-리스프-데이터를-받는다"><a class="header" href="#read는-리스프-데이터를-받는다">READ는 리스프 데이터를 받는다.</a></h2>
+<h2 id="read는-리스프-데이터를-받는다"><a class="header" href="#read는-리스프-데이터를-받는다">READ는 리스프 데이터를 받는다</a></h2>
 <p><a href="./lesson_10.html">레슨 10</a>에서 봤던것처럼, <code>read</code>는 문자를 리스프 데이터로 변환시킵니다. 이제까지, 우리들은 리스프 데이터 여러 출력 값들을 살펴 보았습니다:</p>
 <ul>
 <li>심볼과 숫자</li>
@@ -278,7 +278,7 @@ A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
 ;;&gt;&gt; A BC⌴
 ;;=&gt; |A BC|
 </code></pre>
-<h2 id="open과-close는-파일을-다룰-수-있게-한다"><a class="header" href="#open과-close는-파일을-다룰-수-있게-한다">OPEN과 CLOSE는 파일을 다룰 수 있게 한다.</a></h2>
+<h2 id="open과-close는-파일을-다룰-수-있게-한다"><a class="header" href="#open과-close는-파일을-다룰-수-있게-한다">OPEN과 CLOSE는 파일을 다룰 수 있게 한다</a></h2>
 <p>보통, <code>READ</code>는 키보드를 읽고 <code>PRINT</code>는 화면에 출력합니다. 이러한 함수 모두 옵셔널(optional) 인수를 취합니다; 인수로 <code>READ</code>를 위한 입력 스트림과 <code>PRINT</code>를 위한 출력 스트림을 지정합니다. 스트림(stream)은 무엇일까요? 스트림은 데이터의 소스(source)이자 밑바닥(sink)이며, 보통은 (그치만 절대적이지는 않은) 문자들(characters)입니다. 이제부터, 저희는 텍스트 파일이 어떻게 문자 스트림의 소스가 될 수 있는지를 살펴볼 것입니다. 19장 [p 183]에서 저희는 몇몇 다른 가능성들을 살펴볼 것입니다.</p>
 <p>파일 이름을 인수로 취하고 스트림의 방향(입력과 출력)을 결정하는 키워드 인수를 취하는, <code>OPEN</code> 함수를 이용하여 스트림을 파일로 연결 시킬 수 있습니다. 스트림에 대한 작업을 끝내고 연결된 파일을 닫기 위해선 <code>CLOSE</code> 함수를 사용합니다.</p>
 <pre><code class="language-lisp">(setq out-stream (open &quot;my-temp-file&quot; :direction :output))
